@@ -274,7 +274,8 @@ init_upnp (void)
                 return 1;
         }
 
-        resource_browser = gssdp_resource_browser_new (client, "ssdp:all");
+        resource_browser = gssdp_resource_browser_new (client,
+                                                       GSSDP_ALL_RESOURCES);
         
         g_signal_connect (client,
                           "message-received",
